--- a/index.html
+++ b/index.html
@@ -1298,7 +1298,7 @@
 
                     <div class="thanks-message text-center" id="text-message">
                         <p style="font-size:100px">&#128522;</p>
-                        <h3>Thank you answering</h3><span>I really appreciate your efforts </span><br><br><br>
+                        <h3>Thank you for answering</h3><span>I really appreciate your efforts </span><br><br><br>
                         <span>Dr. Niket Satapara</span>
                     </div>
                     <div style="overflow:auto;" class="mt-3" id="nextprevious">
