--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-md-8">
                 <form id="regForm">
-                    <h1 id="register">Survey Form</h1>
+                    <h1 id="register">Survey Form For Social Media Usage And Health Status</h1>
                     <div class="all-steps" id="all-steps">
                         <span class="step"><i class="fa fa-check" aria-hidden="true"></i></span>
                         <span class="step"><i class="fa fa-check" aria-hidden="true"></i></span>
