--- a/index.html
+++ b/index.html
@@ -1430,7 +1430,7 @@
                         <h3>Thank you for answering</h3><span>I really appreciate your efforts </span><br><br><br>
                         <span>Dr. Niket Satapara</span>
                     </div>
-                    <div class="text-danger" id="fill_warning" hidden>Please fill all details</div>
+                    <!--<div class="text-danger" id="fill_warning" hidden>Please fill all details</div>-->
                     <div style="overflow:auto;" class="mt-3" id="nextprevious">
                         <div style="float:right;"> <button type="button" id="prevBtn" onclick="nextPrev(-1)"><i class="fa fa-angle-double-left"></i></button> <button type="button" id="nextBtn" onclick="nextPrev(1)"><i class="fa fa-angle-double-right"></i></button> </div>
                     </div>
