--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                     <input type="text" class="form-control" id="father_ocp" placeholder="Occupation">
                                 </div>
                                 <div class="form-group col-md-4">
-                                    <input type="number" class="form-control" id="father_income" placeholder="Income(approx in INR)">
+                                    <input type="number" class="form-control" id="father_income" placeholder="Annual Income(approx in INR)">
                                 </div>
                             </div>
                             <label>Mother's Details</label>
@@ -151,7 +151,7 @@
                                     <input type="text" class="form-control" id="mother_ocp" placeholder="Occupation">
                                 </div>
                                 <div class="form-group col-md-4">
-                                    <input type="number" class="form-control" id="mother_income" placeholder="Income(approx in INR)">
+                                    <input type="number" class="form-control" id="mother_income" placeholder="Annual Income(approx in INR)">
                                 </div>
                             </div>
                         </div>
