--- a/index.html
+++ b/index.html
@@ -1332,14 +1332,14 @@
             }
         })
     }
-    $("input[name='concent']").on('click', function(e) {
+    /*$("input[name='concent']").on('click', function(e) {
         if (e.target.value == "no") {
             concentAlert();
             document.getElementById("nextBtn").disabled = true;
         } else {
             document.getElementById("nextBtn").disabled = false;
         }
-    })
+    })*/
 
     //junkfood
     $("input[name='junkfood_radio']").on('click', function(e) {
